fix small screen horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,10 @@ img {
 
 
 .share-links > * {
-  padding: 0 1em;
+  padding-right: 1em;
+}
+.share-links > *:last-child {
+  padding-right: 0;
 }
 .fb-share-button span {
   vertical-align: middle !important;
